--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>比較政府與政治｜第5週 互動式助教課網頁（精簡版）</title>
+  <title>比較政府與政治｜第4週 互動式助教課網頁</title>
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -19,7 +19,7 @@
   <!-- 導覽（僅保留兩區） -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b border-slate-200">
     <nav class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between" aria-label="主導覽">
-      <a href="#top" class="font-bold text-slate-800">第5週｜精簡版</a>
+      <a href="#top" class="font-bold text-slate-800">第4週</a>
       <ul class="hidden md:flex items-center gap-5 text-sm">
         <li><a class="hover:text-indigo-600" href="#pre-class">課前提問</a></li>
         <li><a class="hover:text-indigo-600" href="#spectrum">光譜遊戲</a></li>
@@ -30,7 +30,7 @@
   <main id="top" class="max-w-6xl mx-auto px-4 py-8">
     <!-- Hero 簡述 -->
     <section class="mb-10">
-      <h1 class="text-3xl md:text-4xl font-extrabold leading-tight">第5週｜英國兩黨政治：拉鋸、調適，或終局？（精簡版）</h1>
+      <h1 class="text-3xl md:text-4xl font-extrabold leading-tight">第4週｜英國兩黨政治</h1>
       <p class="mt-2 text-slate-700">本頁僅保留兩個互動功能：<strong>課前提問</strong>與<strong>政黨光譜遊戲</strong>。所有輸入皆儲存在你的瀏覽器（localStorage）。</p>
       <div class="mt-4 flex flex-wrap gap-3">
         <a href="#pre-class" class="px-4 py-2 rounded-xl bg-indigo-600 text-white focus-ring">前往課前提問</a>
